# huiji

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  README.md  capacitor.config.json  demo.html  index.html  manifest.webmanifest  package-lock.json  package.json  pad-icons.js  registerSW.js  rf.js  sw.js  vite.config.js  vitest.config.js  workbox-856ad029.js
assets/: importParsers-0LWlPnPQ.js  importParsers-BP66u50-.js  importParsers-BdNwQ-li.js  importParsers-BjDBu6GX.js  importParsers-BmCBI5l1.js  importParsers-BmQ3vdse.js  importParsers-Bs1UIHI0.js  importParsers-BtISDmFT.js  importParsers-CFgKnhHU.js  importParsers-CdnHtgjg.js  importParsers-D30Kc5TC.js  importParsers-D3pkrL1G.js  importParsers-D9Zc5GEf.js  importParsers-DFb4dN4f.js  importParsers-DZsHyV7k.js  index-3fru0c7a.js  index-5zigwz3_.js  index-8d2PfSNQ.js  index-B-munUzu.js  index-B1JbYdwU.js  index-B4Q7DXEU.js  index-B6lmyKRC.js  index-BDgNFeOy.js  index-BIDlKWQL.js  index-BIlr1Sl4.js  index-BNMZqP3W.js  index-BQcQ9c0L.js  index-B_NJsQFd.js  index-BiGgAM1z.js  index-BldKdc-O.js  index-BrtYyX5J.js  index-BxFBrxmb.js  index-C7mvmvon.js  index-CUgQpBlq.js  index-C_RzE3Ij.js  index-CcKpb9lJ.js  index-CeImwkOF.js  index-CjDwegdw.js  index-Cr5v-Hzo.js  index-CwVc1FZm.js  (+100 more)
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AvatarCropper.jsx  XiaohuiFab.jsx  XiaohuiLetterSpace.jsx
src/constants/: aiProviders.js
src/db/: database.js
src/hooks/: useEditorRecord.js  (+1 more)
(+30 files in other folders)
